Fix publications page spacing

--- a/docs/_sass/dsa-styles-internal-pages.sass
+++ b/docs/_sass/dsa-styles-internal-pages.sass
@@ -58,18 +58,16 @@
     align-items: flex-start
     border-bottom: 1px solid lighten($gray, 20%)
     display: flex
-    padding: 30px 0
 
     &:last-child
       border-bottom: 0
       margin-bottom: 5%
 
     .citation-text
-      min-height: 60px
       h4
-        margin-bottom: 7px
+        margin-bottom: 5px
         color: $primary
-        font-size: 24px
+        font-size: 22px
       p
         margin-bottom: 7px
         color: $grey-darker
